--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BugTracker.Models.Ticket
 @using Microsoft.AspNetCore.Identity
 @using BugTracker.Data
+@using BugTracker.Data.Enums 
 @inject ApplicationDbContext ApplicationDbContext
 @inject SignInManager<CustomUser> SignInManager
 @inject UserManager<CustomUser> UserManager
@@ -87,6 +88,11 @@
                 <div class="row">
                     <div class="col">
                         <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                        @if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString())))
+                        {
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+                        }
+
                         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
                     </div>
                 </div>
