update firefly and shooting star effect

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,14 @@
     ViewData["Title"] = "Register";
     ViewData["background"] = "/img/4kpic4.jpg";
 }
-
+<div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+</div>
+<div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 
 <div class="container" style="opacity: 0.7;">
     <br />
@@ -63,7 +70,7 @@
 
                 <div class="row pt-2 ">
                     <div class="col text-center">
-                        <a class="nav-link text-white "  asp-area="Identity" asp-page="/Account/Login">Or Login as a Demo User?</a>
+                        <a class="nav-link text-white " asp-area="Identity" asp-page="/Account/Login">Or Login as a Demo User?</a>
                     </div>
                 </div>
             </div>
