--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     <script async src="https://cse.google.com/cse.js?cx=031b060c4c58cdae4"></script>
 
 </head>
-<body class="sidebar-mini layout-fixed sidebar-collapse" onload=display_ct();  style="background-image: url('@ViewData["background"]');width:100%;height:auto; background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
+<body class="sidebar-mini layout-fixed sidebar-collapse" onload=display_ct(); style="background-image: url('@ViewData["background"]');width:100%;height:auto; background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
 
     <div>
         <!-- Sidebar -->
@@ -283,7 +283,7 @@
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                             <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+                            with font-awesome or any other icon font library -->
 
                             <li class="nav-item">
                                 <a asp-controller="Home" asp-action="Index" class="nav-link">
@@ -580,10 +580,10 @@
 
 
                                         @*<div class="col">
-                                            <a class="btn btn-secondary btn-block">
-                                                How to use?
-                                            </a>
-                                        </div>*@
+                                                <a class="btn btn-secondary btn-block">
+                                                    How to use?
+                                                </a>
+                                            </div>*@
                                     </div>
                                     <hr />
                                     <div class="row">
@@ -611,7 +611,14 @@
                 &copy; 2021 - BugTracker - Made by <a href="https://duylanle-portfolio.netlify.app/" target="_blank">Duy Lan Le</a>
             </div>
         </footer>
-
+        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+        <div id="preloader">
+                <div class="center">
+                    <p style="text-align: center;font-size: 14px; font-weight: 800; letter-spacing: 1px; text-transform: uppercase; border-radius: 0; font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;">
+                        Just A Second, I'm Loading...
+                    </p>
+                </div>
+            </div>
     </div>
 
     <script src="~/plugins/jquery/jquery.min.js"></script>
@@ -660,9 +667,9 @@
     <script src="~/js/demo.js"></script>
     @if (SignInManager.IsSignedIn(User))
     {
-<script>
+        <script>
       // Charts is the Controller name, TypeChart is the action
-        var Url1 = '@Url.Action("TypeChart", "Charts")'; // represent the endpoint 
+        var Url1 = '@Url.Action("TypeChart", "Charts")'; // represent the endpoint
         var Url2 = '@Url.Action("PriorityChart", "Charts")'; // represent the endpoint
         var Url3 = '@Url.Action("StatusChart", "Charts")'; // represent the endpoint
         //Step 2 - start the structure for our AJAX call
@@ -738,9 +745,9 @@
                 options: donutOptions
             })
         });
-    
-</script>
-      }
+
+        </script>
+    }
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
