--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,14 @@
     ViewData["Title"] = "Log in";
     ViewData["background"] = "/img/4kpic4.jpg";
 }
-
-
+<div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+</div>
+<div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 <div class="container" style="opacity: 0.7;">
     <br />
     <br />
@@ -58,7 +64,7 @@
                         {
                             <div>
                                 <p>
-                                    
+
                                 </p>
                             </div>
                         }
@@ -139,7 +145,7 @@
         <div class="col-3"></div>
     </div>
 
-    
+
 </div>
 <div class="container-fluid" style="opacity: 0.7;">
     <div class="row">
@@ -239,7 +245,7 @@
         <div class="col"></div>
     </div>
 
-   
+
 </div>
 
 
