--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,28 +7,7 @@
 @inject UserManager<CustomUser> UserManager
 @{
     ViewData["Title"] = "Home Page";
-    var currentTime = DateTime.Now;
     var role = await roleService.ListUserRoleAsync((await UserManager.GetUserAsync(User)));
-    var userId = (await UserManager.GetUserAsync(User)).Id;
-    var userTicket = ApplicationDbContext.Ticket.Where(t => t.OwnnerId == userId || t.DeveloperId == userId).ToList();
-    var projects = ApplicationDbContext.Project.ToList();
-    var ticketType = ApplicationDbContext.TicketType.ToList();
-    var ticketStatus = ApplicationDbContext.Status.ToList();
-    var ticketPriority = ApplicationDbContext.Priority.ToList();
-    var number_of_project = projects.Count;
-    var number_of_ticket = ApplicationDbContext.Ticket.ToList().Count;
-    var number_of_user = ApplicationDbContext.Users.ToList().Count;
-    var number_of_close_ticket = ApplicationDbContext.Ticket.Where(t => t.StatusId == 5).ToList().Count;
-    var persent_of_ticket_done = number_of_close_ticket * 100 / number_of_ticket ;
-    var number_of_urgent_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 1).ToList().Count;
-    var number_of_high_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 2).ToList().Count;
-    var number_of_medium_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 3).ToList().Count;
-    var number_of_low_ticket = ApplicationDbContext.Ticket.Where(t => t.PriorityId == 4).ToList().Count;
-    var number_unassign_ticket = ApplicationDbContext.Ticket.Where(t => t.IsAssigned == false).ToList().Count;
-    var number_new_ticket = ApplicationDbContext.Ticket.Where(t => t.Created >= currentTime.AddDays(-7)).ToList().Count;
-    var number_resolve_ticket = ApplicationDbContext.Ticket.Where(t => t.StatusId == 5).Where(t => t.Updated >= currentTime.AddDays(-7)).ToList().Count;
-    var number_of_company = ApplicationDbContext.Company.ToList().Count;
-
 }
 <div class="container-fluid">
     <div class="row mt-2">
@@ -216,7 +195,7 @@
                                 <div class="info-box-content">
                                     <span class="info-box-text">Works Process</span>
                                     <span class="info-box-number">
-                                        @persent_of_ticket_done
+                                        @ViewBag.persent_of_ticket_done
                                         <small>%</small>
                                     </span>
                                 </div>
@@ -230,7 +209,7 @@
                                 <div class="info-box-content">
                                     <span class="info-box-text">Un-Assign Tickets</span>
                                     <span class="info-box-number">
-                                        @number_unassign_ticket
+                                        @ViewBag.number_unassign_ticket
                                         <small>Tickets</small>
                                     </span>
                                 </div>
@@ -244,7 +223,7 @@
                                 <div class="info-box-content">
                                     <span class="info-box-text">New Tickets In Last 7 Days</span>
                                     <span class="info-box-number">
-                                        @number_new_ticket
+                                        @ViewBag.number_new_ticket
                                         <small>Tickets</small>
                                     </span>
                                 </div>
@@ -258,7 +237,7 @@
                                 <div class="info-box-content">
                                     <span class="info-box-text">Tickets Resolved In Last 7 Days</span>
                                     <span class="info-box-number">
-                                        @number_resolve_ticket
+                                        @ViewBag.number_resolve_ticket
                                         <small>Tickets</small>
                                     </span>
                                 </div>
@@ -279,7 +258,7 @@
 
                                 <div class="info-box-content">
                                     <span class="info-box-text">Projects</span>
-                                    <span class="info-box-number">@number_of_project</span>
+                                    <span class="info-box-number">@ViewBag.number_of_project</span>
                                 </div>
                                 <!-- /.info-box-content -->
                             </div>
@@ -289,7 +268,7 @@
 
                                 <div class="info-box-content">
                                     <span class="info-box-text">Tickets</span>
-                                    <span class="info-box-number">@number_of_ticket</span>
+                                    <span class="info-box-number">@ViewBag.number_of_ticket</span>
                                 </div>
 
                                 <!-- /.info-box-content -->
@@ -300,7 +279,7 @@
 
                                 <div class="info-box-content">
                                     <span class="info-box-text">User</span>
-                                    <span class="info-box-number">@number_of_user</span>
+                                    <span class="info-box-number">@ViewBag.number_of_user</span>
                                 </div>
                                 <!-- /.info-box-content -->
                             </div>
@@ -403,7 +382,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var ticket in userTicket)
+                                    @foreach (var ticket in ViewBag.userTicket)
                                     {
                                         <tr>
                                             <td>
@@ -425,16 +404,16 @@
                                                 @(ticket.Updated.ToString("dd MMMM yyyy - hh:mm tt"))
                                             </td>
                                             <td>
-                                                @((projects.FirstOrDefault(p => p.Id == ticket.ProjectId)).Name)
+                                               @ticket.Project.Name
                                             </td>
                                             <td>
-                                                @((ticketType.FirstOrDefault(p => p.Id == ticket.TicketTypeId)).Name)
+                                                @ticket.TicketType.Name
                                             </td>
                                             <td>
-                                                @((ticketPriority.FirstOrDefault(p => p.Id == ticket.PriorityId)).Name)
+                                                @ticket.Priority.Name
                                             </td>
                                             <td>
-                                                @((ticketStatus.FirstOrDefault(p => p.Id == ticket.StatusId)).Name)
+                                                @ticket.Status.Name
                                             </td>
                                             <td class="project-actions text-right">
                                                 <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="btn btn-primary btn-sm">
