--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@using BugTracker.Services
+﻿@model IEnumerable<BugTracker.Models.Ticket>
+@using BugTracker.Services
 @using BugTracker.Data
-@inject ApplicationDbContext ApplicationDbContext 
+@inject ApplicationDbContext ApplicationDbContext
 @inject ICustomRoleService roleService
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<CustomUser> SignInManager
@@ -92,9 +93,9 @@
                         </div>
                         @*<a asp-controller="Projects" asp-action="Create" class="btn btn-secondary pb-2 mb-2"> <i class="fas fa-tasks"></i> Create New Projects</a>*@
 
-                    <button type="button" class="btn btn-secondary pb-2 mb-2" data-toggle="modal" data-target="#exampleModal2">
-                        <i class="fas fa-tasks"></i> Create New Project
-                    </button>
+                        <button type="button" class="btn btn-secondary pb-2 mb-2" data-toggle="modal" data-target="#exampleModal2">
+                            <i class="fas fa-tasks"></i> Create New Project
+                        </button>
 
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
@@ -125,7 +126,7 @@
                                                 <label name="CompanyId" class="control-label">Company</label>
                                                 <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
                                             </div>
-                                           
+
 
                                         </div>
                                         <div class="modal-footer">
@@ -155,7 +156,7 @@
                         <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
                         <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-comments"></i> View My Inbox</a>
                         <a asp-controller="Notifications" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-bell"></i> View My Notifications</a>
-                       
+
                     </div>
                 </div>
             </div>
@@ -178,7 +179,7 @@
 
         }
     </div>
- 
+
     <div class="row">
         <div class="col">
             <!-- DONUT CHART -->
@@ -249,7 +250,7 @@
 
                     </div>
                 </div>
-                
+
                 <div class="row">
                     <div class="col">
                         <div class="card-body">
@@ -321,7 +322,7 @@
             </div>
             <!-- /.card -->
         </div>
-       
+
     </div>
     <div class="row">
         <div class="col">
@@ -347,86 +348,93 @@
                 <!-- /.card-header -->
                 <div class="card-body">
                     <div class="table-responsive mailbox-messages">
-                       
-                            <table class="table table-striped table-hover" id="homeTable">
-                                <thead>
+
+                        <table class="table table-striped table-hover" id="homeTable">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Description)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Created)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Updated)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Developer)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Ownner)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Project)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.IsAssigned)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Status)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Priority)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.TicketType)
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
                                     <tr>
-                                        <th>
-                                            Owner
-                                        </th>
-                                        <th>
-                                            Developer
-                                        </th>
-                                        <th>
-                                            Title
-                                        </th>
-                                        <th>
-                                            Created
-                                        </th>
-                                        <th>
-                                            Updated
-                                        </th>
-                                        <th>
-                                            Project
-                                        </th>
-                                        <th>
-                                            Type
-                                        </th>
-                                        <th>
-                                            Priority
-                                        </th>
-                                        <th>
-                                            Status
-                                        </th>
-                                        <th></th>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Description)
+                                        </td>
+                                        <td>
+                                            @item.Created.ToString("dd MMMM yyyy - hh:mm tt")
+                                        </td>
+                                        <td>
+                                            @item.Updated.ToString("dd MMMM yyyy - hh:mm tt")
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Developer.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Ownner.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Project.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.IsAssigned)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Status.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Priority.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TicketType.Name)
+                                        </td>
+                                        <td class="project-actions text-right">
+                                            <a class="btn btn-primary btn-sm mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
+                                            <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
+                                            <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                        </td>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var ticket in ViewBag.userTicket)
-                                    {
-                                        <tr>
-                                            <td>
-                                                @((await UserManager.FindByIdAsync(ticket.OwnnerId)).FullName)
-                                            </td>
-                                            <td>
-                                                @if ((await UserManager.FindByIdAsync(ticket.DeveloperId)) != null)
-                                                {
-                                                    @((await UserManager.FindByIdAsync(ticket.DeveloperId)).FullName)
-                                                }
-                                            </td>
-                                            <td>
-                                               @(ticket.Description)
-                                            </td>
-                                            <td>
-                                                @ticket.Created.ToString("dd MMMM yyyy - hh:mm tt")
-                                            </td>
-                                            <td>
-                                                @(ticket.Updated.ToString("dd MMMM yyyy - hh:mm tt"))
-                                            </td>
-                                            <td>
-                                               @ticket.Project.Name
-                                            </td>
-                                            <td>
-                                                @ticket.TicketType.Name
-                                            </td>
-                                            <td>
-                                                @ticket.Priority.Name
-                                            </td>
-                                            <td>
-                                                @ticket.Status.Name
-                                            </td>
-                                            <td class="project-actions text-right">
-                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="btn btn-primary btn-sm">
-                                                    <i class="fas fa-folder"></i>View
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    }
+                                }
+                            </tbody>
+                        </table>
 
-
-                                </tbody>
-                            </table>
-                        
                     </div>
                     <!-- /.row -->
                 </div>
