--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-2"></div>
         <div class="col">
-            <form asp-action="Edit">
+            <form asp-action="Edit" enctype="multipart/form-data">
                 <div class="card card-primary">
                     <div class="card-header">
                         <h3 class="card-title">Edit Project</h3>
@@ -31,6 +31,7 @@
                             <textarea asp-for="Description" class="form-control" rows="4"></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
+                        <input type="hidden" asp-for="Created" class="form-control" />
                         @if (Model.ImageData != null && Model.ContentType != null)
                         {
                             <input type="hidden" name="imageData" value="@Convert.ToBase64String(Model.ImageData)" class="form-control" />
